Fix the responsiveness on mobile and fix feedback given by TSE

--- a/about.css
+++ b/about.css
@@ -33,10 +33,128 @@ body {
   background-color: #272a31;
 }
 
+main {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: 
+    "about-page1"
+    "about-page2";
+}
+
+.about-page1 {
+  grid-area: about-page1;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: 
+    "about-main"
+    "about-branding";
+}
+
+.about-main {
+  text-align: center;
+}
+.about-head {
+  font-weight: 700;
+}
+
+.about-text {
+  border: 1px solid lightgray;
+  padding: 1em;
+}
+
+.about-contact {
+  padding: 1.5em;
+}
+
+.about-branding {
+  text-align: center;
+  padding: 1.5em;
+  line-height: 1.2;
+}
+
+.branding-title {
+  font-weight: 700;
+}
+
+.branding-text {
+  line-height: 1.5;
+  letter-spacing: 0.04;
+}
+
+.branding-logo img {
+  width: 200px;
+  height: auto;
+}
+
+.branding-date {
+  font-weight: 700;
+}
+
+.about-page2 {
+  display: grid;
+  grid-area: about-page2;
+  text-align: center;
+  grid-template-rows: 100px 2fr 200px;
+  row-gap: 1em;
+  grid-template-areas: 
+    "past-conf"
+    "past-conf-images"
+    "footer";
+}
+
+.past-conf {
+  grid-area: past-conf;
+  margin: 0 1em 0 1em;
+}
+
+
+.past-conf-images {
+  grid-area: past-conf-images;
+  display: grid;
+  margin: 0 2em 0 2em;
+  row-gap: 1em;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: 
+    "past-conf1"
+    "past-conf2";
+}
+
+.past-conf1 {
+  grid-area: past-conf1;
+  background-image: url(./images/accra.jpg);
+  background-size: cover;
+
+}
+
+.past-conf2 {
+  grid-area: past-conf2;
+  background-image: url(./images/capetown.jpg);
+  background-size: cover;
+}
+
+.footer {
+  grid-area: footer;
+  padding: 1em;
+
+}
+
+.footer img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 1em;
+}
+
+.past-conf-images div * {
+  font-weight: 700;
+}
+.past-conf-images div:hover {
+  cursor: pointer;
+}
+
 @media screen and (min-width: 768px) {
   main {
     display: grid;
-    grid-template-rows: 950px 750px;
+    grid-template-rows: 950px 1150px;
     grid-template-areas: 
       "about-page1"
       "about-page2";
@@ -122,7 +240,7 @@ body {
     grid-area: about-page2;
     text-align: center;
     grid-template-columns: 1fr 6fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-rows: 150px 1fr 200px;
     row-gap: 1em;
     grid-template-areas: 
       ". past-conf ."
@@ -147,6 +265,8 @@ body {
     column-gap: 1em;
     grid-template-columns: 1fr 1fr;
     justify-content: space-around;
+    grid-template-areas: 
+      "past-conf1 past-conf2";
   }
 
   .past-conf1 {
